--- a/transformasi/latihansoal/translasisoal.html
+++ b/transformasi/latihansoal/translasisoal.html
@@ -41,10 +41,10 @@
         <div class="collapse navbar-collapse" id="navbarNav">
           <ul class="navbar-nav ms-auto">
             <li class="nav-item">
-              <a class="nav-link active" aria-current="page" href="../index.html">Home Matriks</a>
+              <a class="nav-link active" aria-current="page" href="/transformasi/">Transformasi</a>
             </li>
             <li class="nav-item">
-              <a class="nav-link active" aria-current="page" href="../soal.html">Kumpulan Soal Latihan</a>
+              <a class="nav-link active" aria-current="page" href="../daftarisimateri.html">Daftar isi Materi</a>
             </li>
           </ul>
         </div>
@@ -95,24 +95,24 @@
                 <input type="radio" name="soal1" value="0" />
                 \(A'(3, 7) \)
                 <br />
-                <input type="radio" name="soal1" value="10" id="soal1" />
+                <input type="radio" name="soal1" value="0"  />
                 \(A'(7, -1) \)
                 <br />
                 <input type="radio" name="soal1" value="0" />
                 \(A'(7, 3) \)
                 <br />
-                <input type="radio" name="soal1" value="0" />
+                <input type="radio" name="soal1" value="10" id="soal1"/>
                 \(A'(1, 9) \)
                 <hr />
                 <!--========================= soal no 2 ===========================================================================-->
                 <li>Diketahui titik \(P'(4,-12)\) adalah bayangan titik \(P\) oleh translasi \(T=\begin{pmatrix}-9 \\ 8 \end{pmatrix} \). Koordinat titik \(P\) adalah . . .</li>
-                <input type="radio" name="soal2" value="0" />
+                <input type="radio" name="soal2" value="10" id="soal2" />
                 \((13, -20)\)
                 <br />
                 <input type="radio" name="soal2" value="0" />
                 \((13,-4) \)
                 <br />
-                <input type="radio" name="soal2" value="10" id="soal2" />
+                <input type="radio" name="soal2" value="0"  />
                 \((4,20) \)
                 <br />
                 <input type="radio" name="soal2" value="0" />
@@ -126,13 +126,13 @@
                 <input type="radio" name="soal3" value="0"  />
                 \((10, -5) \)
                 <br />
-                <input type="radio" name="soal3" value="10" id="soal3" />
+                <input type="radio" name="soal3" value="0"  />
                 \((10, 1) \)
                 <br />
                 <input type="radio" name="soal3" value="0" />
                 \((2,-1) \)
                 <br />
-                <input type="radio" name="soal3" value="0" />
+                <input type="radio" name="soal3" value="10" id="soal3"/>
                 \((-2, 1) \)
                 <br />
                 <input type="radio" name="soal3" value="0" />
@@ -144,7 +144,7 @@
                 <input type="radio" name="soal4" value="0" />
                 \(D'(0,4) \)
                 <br />
-                <input type="radio" name="soal4" value="10" id="soal4"/>
+                <input type="radio" name="soal4" value="0" />
                 \(D'(0,2) \)
                 <br />
                 <input type="radio" name="soal4" value="0" />
@@ -153,18 +153,18 @@
                 <input type="radio" name="soal4" value="0"  />
                 \(D'(6,-6) \)
                 <br />
-                <input type="radio" name="soal4" value="0" />
+                <input type="radio" name="soal4" value="10" id="soal4">
                 \(D'(6,2) \)
                 <hr />
                 <!-- soal no 5 ================================================================================================-->
-                <li>Segitiga \(PQR\) mempunyai koordinat \(P(-3,4) \), \((-1,0)\) dan \(R(0,2) \). Segitiga ditranslasikan oleh \(T\) menghasilkan bayangan segitiga \(P'Q'R'\). Jika koordinat titik \(P'(1,-2) \), koordinat titik \(Q'\) dan \(R'\) berturut-turut adalah . . . </li>
-                <input type="radio" name="soal5" value="0" />
+                <li>Segitiga \(PQR\) mempunyai koordinat \(P(-3,4) \), \(Q(-1,0)\) dan \(R(0,2) \). Segitiga ditranslasikan oleh \(T\) menghasilkan bayangan segitiga \(P'Q'R'\). Jika koordinat titik \(P'(1,-2) \), koordinat titik \(Q'\) dan \(R'\) berturut-turut adalah . . . </li>
+                <input type="radio" name="soal5" value="10" id="soal5"/>
                 \((3,-6) \) dan \((4,-4) \)
                 <br />
                 <input type="radio" name="soal5" value="0" />
                 \((3,-6) \) dan \((-4,4) \)
                 <br />
-                <input type="radio" name="soal5" value="10"  id="soal5" />
+                <input type="radio" name="soal5" value="0"   />
                 \((-3,6) \) dan \((4,-4) \)
                 <br />
                 <input type="radio" name="soal5" value="0"/>
@@ -225,38 +225,37 @@
                 \((-2,3) \)
                 <hr />
                 <!-- =====SOAL NO 9======================================================================= -->
-                <li>Transpose matriks \(A=\begin{pmatrix}a&b \\ c&d \end{pmatrix}\) adalah \(A^T =\begin{pmatrix}a&c \\ b&d \end{pmatrix}\). Jika \(A^T = A^{-1}\), maka \(ad-bc=...\)</li>
+                <li>Diketahui koordinat titik \(P\) adalah \((2c,3)\). Oleh karena translasi \(\begin{pmatrix}c\\-3\end{pmatrix} \) diperoleh bayangan titik \(P\) yaitu \(P'(3,0) \), maka nilai \(c\) adalah . . . </li>
                 <input type="radio" name="soal9" value="0" />
-                \(-1\) atau \(- \sqrt{2}\)
+                \(-3\)
                 <br />
                 <input type="radio" name="soal9" value="0" />
-                \(1\) atau \(\sqrt{2}\)
+                \(-2\)
                 <br />
                 <input type="radio" name="soal9" value="10"  />
-                \(-\sqrt{2}\) atau \(\sqrt{2}\)
+                \(-1\)
                 <br />
                 <input type="radio" name="soal9" value="10" id="soal9"/>
-                \(-1\) atau \(1\)
-                <br />
+                \(1\)       <br />
                 <input type="radio" name="soal9" value="0" />
-                \(1\) atau \(- \sqrt{2}\)
+                \(2\)
                 <hr />
                 <!-- =====SOAL NO 10======================================================================= -->
                 <li>Diketahui koordinat titik \(P\) adalah \((4,-1)\). Oleh karena translasi \(\begin{pmatrix}2\\a\end{pmatrix} \) diperoleh bayangan titik \(P\) yaitu \(P'(-2a,-4) \), maka nilai \(a\) adalah . . . </li>
                 <input type="radio" name="soal10" value="10" id="soal10" />
-                -3
+                \(-3\)
                 <br />
                 <input type="radio" name="soal10" value="0" />
-                -1
+                \(-1\)
                 <br />
                 <input type="radio" name="soal10" value="0" />
-                0
+                \(0\)
                 <br />
                 <input type="radio" name="soal10" value="0" />
-                1
+                \(1\)
                 <br />
                 <input type="radio" name="soal10" value="0" />
-                3
+                \(3\)
                 <hr />
               </ol>
               <!-- ------------------------------------------------------------------------------------------------------------------- -->
@@ -375,10 +374,7 @@
             btnLoading.classList.toggle('d-none');
             btnKirim.classList.toggle('d-none');
             //  tambahkan Alert
-            myAlert.classList.toggle('d-none');
-            console.log('Success!', response);
-
-            // form.reset();
+            myAlert.classList.toggle('d-none');G-WWKYNJM30L
           })
           .catch((error) => console.error('Error!', error.message));
       });
